# pysimplegui-5.0.7

./: .gitignore  README.md  pyproject.toml  setup.py
PySimpleGUI/: __init__.py
