[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySimpleGUI"
version = "5.0.7"
description = "A rebuilt version of PySimpleGUI"
readme = "README.md"
authors = [
    {name = "Prince Goting"}
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rsa>=4.9",
]

[project.urls]
"Homepage" = "https://github.com/pfgoting/pysimplegui-5.0.7" 